--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^5.2.11",
     "@angular/animations": "^5.2.0",
     "@angular/cdk": "^5.2.4",
+    "@angular/cli": "^6.0.8",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.11",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
@@ -28,7 +28,9 @@
     "@angular/router": "^5.2.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
+    "path": "^0.12.7",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
